Move nectar-testing and yaml jobs to bionic hosts
Change-Id: I6373f97dee2c43caf52901b67a0a6c1184a16a7a

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -495,7 +495,7 @@
 - job-template:
     name: '{name}-yaml'
     defaults: global
-    node: xenial
+    node: bionic
 
     parameters:
       - string:
