Switch some jobs to use any openstack node (xenial/bionic etc.)
Change-Id: I4e9791fcda11a6ee892d3421223db3d96aca8279

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1,7 +1,7 @@
 - job-template:
     name: '{name}-puppet-unit'
     defaults: global
-    node: xenial
+    node: openstack
 
     parameters:
       - string:
@@ -585,7 +585,7 @@
 - job-template:
     name: '{name}-markdown'
     defaults: global
-    node: xenial
+    node: openstack
 
     parameters:
       - string:
@@ -782,7 +782,7 @@
 - job-template:
     name: '{name}-puppet-prod-review'
     defaults: global
-    node: xenial
+    node: openstack
 
     parameters:
       - string:
