Add note to testcloud-upgrader job about config file location
Change-Id: I578ab96732d24327734ba6615128c6dcdb2df313

--- a/infrastructure.yaml
+++ b/infrastructure.yaml
@@ -1,6 +1,10 @@
 
 - job:
     name: testcloud-upgrade
+    description: |
+        Configuration for this job is stored in the Hivemind config file on
+        <b>jenkins-upgrader.mgmt.rc.nectar.org.au</b> at
+        <b>/var/lib/jenkins/.hivemind/hivemind/config.py</b>
     defaults: global
     node: upgrader
     concurrent: false
