Add Xenial jobs for nectar-metrics
Graphite is Xenial in production

Change-Id: I62006e3464b8fe6c2e6b51c702172e0005d6a19e

--- a/python.yaml
+++ b/python.yaml
@@ -89,6 +89,9 @@
       - '{name}-bionic-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-xenial-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
 
 - project:
     name: python-nectarallocationclient
