--- a/python.yaml
+++ b/python.yaml
@@ -94,6 +94,24 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: nectar-openstack
+    jobs:
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py27'
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'flake8'
+      - '{name}-bionic-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-xenial-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: python-nectarallocationclient
     jobs:
       - '{name}-xenial-tox-{environment}':
