Fix org for nectar-openstack
Change-Id: Icdb7e9d13cc2e6d387509c6a14226c3d9616489c

--- a/python.yaml
+++ b/python.yaml
@@ -98,18 +98,18 @@
     jobs:
       - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
-         organisation: 'NeCTAR-RC'
+         organisation: 'internal'
          environment: 'py27'
       - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
-         organisation: 'NeCTAR-RC'
+         organisation: 'internal'
          environment: 'flake8'
       - '{name}-bionic-deb-package':
          access: 'anonymous'
-         organisation: 'NeCTAR-RC'
+         organisation: 'internal'
       - '{name}-xenial-deb-package':
          access: 'anonymous'
-         organisation: 'NeCTAR-RC'
+         organisation: 'internal'
 
 - project:
     name: python-nectarallocationclient
