add puppet-gitea to Jenkins
Change-Id: I6ee42b1debce5ba25db2456d8cbbc82788ed530a

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -181,6 +181,13 @@
          organisation: 'internal'
 
 - project:
+    name: puppet-gitea
+    jobs:
+      - '{name}-puppet-unit':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: puppet-glance
     jobs:
       - '{name}-puppet-unit':
